csldatadir =	$(datadir)/csl/maps/RedEclipse
csldata_DATA = blink.cfg, dawn.cfg, deli.cfg, dutility.cfg, facility.cfg, futuresport.cfg, keystone.cfg, longestyard.cfg, \
	nova.cfg, spacetech.cfg, tranquility.cfg, venus.cfg, alphacampaign.cfg, center.cfg, deadsimple.cfg, depot.cfg, echo.cfg, \
	forge.cfg, ghost.cfg, lab.cfg, panic.cfg, stone.cfg, tribal.cfg, warp.cfg, bath.cfg, darkness.cfg, deathtrap.cfg, \
	dropzone.cfg, error.cfg, foundation.cfg, hinder.cfg, linear.cfg, mist.cfg, processing.cfg, testchamber.cfg, ubik.cfg, wet.cfg,

EXTRA_DIST = $(csldata_DATA)
SUBDIRS = 256
