csldatadir =	$(datadir)/csl/maps/RedEclipse/256

EXTRA_DIST = $(csldata_DATA)
csldata_DATA = alphacampaign.png, bath.png, blink.png, center.png, darkness.png, dawn.png, deadsimple.png, deathtrap.png, deli.png, \
	depot.png, dropzone.png, dutility.png, echo.png, error.png, facility.png, forge.png, foundation.png, futuresport.png, \
	ghost.png, hinder.png, keystone.png, lab.png, linear.png, longestyard.png, mist.png, nova.png, panic.png, processing.png, \
	spacetech.png, stone.png, testchamber.png, tranquility.png, tribal.png, ubik.png, venus.png, warp.png, wet.png,
	